--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="producto">
+<div *ngIf="producto" style="display: flex; flex-direction: column;">
     <span>{{producto.codigo}} </span>
     <span>{{producto.descripcion}}</span>
     <span>{{producto.precio}}</span>
