--- a/src/app/components/alta-producto/alta-producto.component.html
+++ b/src/app/components/alta-producto/alta-producto.component.html
@@ -9,7 +9,7 @@
         </div>
 
         <div class="col-md-8 order-md-1">
-            <h4 class="mb-3">Alta Actor</h4>
+            <h4 class="mb-3">Alta Producto</h4>
             <form class="needs-validation" novalidate>
                 <div class="row">
                     <div class="col-md-6 mb-3">
